# personal-knowledge-graph

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
backend/src/db/: mod.rs  pool.rs  schema.rs
backend/src/db/repositories/: connection_repo.rs  mod.rs  note_repo.rs  tag_repo.rs
backend/src/models/: connection.rs  mod.rs  note.rs  tag.rs
backend/src/services/: connection_service.rs  mod.rs  note_service.rs  suggestion_service.rs  tag_service.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: GraphView.tsx  NoteEditor.tsx  NoteList.tsx  Sidebar.tsx
frontend/src/services/: api.ts
